--- a/.github/workflows/todo-webapp-pr.yml
+++ b/.github/workflows/todo-webapp-pr.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - 'src/TodoWebapp/**'
       - '.github/workflows/todo-webapp-pr.yml'
+      - 'deploy/terraform/todo-webapp/**'
 
 jobs:
   build:
@@ -103,3 +104,33 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    scan-terraform:
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Checkov GitHub Action
+        uses: bridgecrewio/checkov-action@v12
+        continue-on-error: true
+        with:
+          output_format: cli,sarif
+          output_file_path: console,results.sarif
+          directory: deploy/terraform/todo-webapp
+        
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v3
+        if: success() || failure()
+        with:
+          sarif_file: results.sarif
+
+      - name: Publish security report to artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: checkov-report
+          path: results.sarif
