--- a/.github/workflows/todo-api-pr.yml
+++ b/.github/workflows/todo-api-pr.yml
@@ -1,11 +1,12 @@
-name: TodoWebApp PR
+name: TodoAPI PR
 
 on:
   pull_request:
     branches: [ main ]
     paths:
-      - 'src/TodoWebapp/**'
-      - '.github/workflows/todo-webapp-pr.yml'
+      - 'src/TodoAPI/**'
+      - 'src/TodoAPI.Tests/**'
+      - '.github/workflows/todo-api-pr.yml'
 
 jobs:
   build:
@@ -24,10 +25,25 @@ jobs:
           dotnet-version: 6.0.x
 
       - name: Restore dependencies
-        run: dotnet restore src/TodoWebapp/TodoWebapp.csproj
+        run: |
+          dotnet restore src/TodoAPI/TodoAPI.csproj
+          dotnet restore src/TodoAPI.Tests/TodoAPI.Tests.csproj
 
       - name: Build
-        run: dotnet build --no-restore src/TodoWebapp/TodoWebapp.csproj
+        run: |
+          dotnet build --no-restore src/TodoAPI/TodoAPI.csproj
+          dotnet build --no-restore src/TodoAPI.Tests/TodoAPI.Tests.csproj
+
+      - name: Test
+        run: dotnet test --no-build src/TodoAPI.Tests/TodoAPI.Tests.csproj --verbosity normal --logger "trx;LogFileName=test-results.trx"
+
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Todo API Tests
+          path: '**/TestResults/*.trx'
+          reporter: dotnet-trx
 
   sca:
     runs-on: ubuntu-latest
@@ -47,15 +63,17 @@ jobs:
           dotnet-version: 6.0.x
 
       - name: Restore dependencies
-        run: dotnet restore src/TodoWebapp/TodoWebapp.csproj
+        run: |
+          dotnet restore src/TodoAPI/TodoAPI.csproj
+          dotnet restore src/TodoAPI.Tests/TodoAPI.Tests.csproj
 
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/dotnet@master
-        continue-on-error: true # Garantir que o upload do SARIF seja executado
+        continue-on-error: true # Ensure SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --sarif-file-output=snyk.sarif --file=TodoWebapp.sln
+          args: --sarif-file-output=snyk.sarif --file=TodoAPI.sln
 
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v2
@@ -93,29 +111,11 @@ jobs:
       - name: Set up SonarCloud
         uses: sonarsource/sonarcloud-github-action@v3.1.0
         with:
-          projectBaseDir: src/TodoWebapp
+          projectBaseDir: src/TodoAPI
           args: >
-            -Dsonar.organization=<kimare16>
-            -Dsonar.projectKey=<kimare16_secure-devops-labs>
+            -Dsonar.organization=<your_sonar_org_key>
+            -Dsonar.projectKey=<your_sonar_project_key>
             -Dsonar.verbose=true
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  run-container-scan:
-    name: Container Security Scan
-    permissions:
-      contents: read
-      security-events: write
-      actions: read
-
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Bui
